@@ -1,15 +1,23 @@
 package it.gov.pagopa.initiative.service;
 
 
+import feign.FeignException;
+import feign.Request;
+import feign.RequestTemplate;
 import it.gov.pagopa.initiative.connector.decrypt.DecryptRestConnector;
+import it.gov.pagopa.initiative.connector.email_notification.EmailNotificationRestConnector;
 import it.gov.pagopa.initiative.connector.encrypt.EncryptRestConnector;
 import it.gov.pagopa.initiative.connector.file_storage.FileStorageConnector;
 import it.gov.pagopa.initiative.connector.group.GroupRestConnector;
 import it.gov.pagopa.initiative.connector.io_service.IOBackEndRestConnector;
+import it.gov.pagopa.initiative.connector.io_service.IOBackEndRestConnectorImpl;
 import it.gov.pagopa.initiative.connector.onboarding.OnboardingRestConnector;
+import it.gov.pagopa.initiative.connector.ranking.RankingRestConnector;
+import it.gov.pagopa.initiative.connector.selc.SelcRestConnector;
 import it.gov.pagopa.initiative.constants.InitiativeConstants;
 import it.gov.pagopa.initiative.constants.InitiativeConstants.Exception.InternalServerError;
 import it.gov.pagopa.initiative.constants.InitiativeConstants.Exception.NotFound;
+import it.gov.pagopa.initiative.constants.InitiativeConstants.Status;
 import it.gov.pagopa.initiative.dto.*;
 import it.gov.pagopa.initiative.dto.io.service.ServiceMetadataDTO;
 import it.gov.pagopa.initiative.dto.io.service.ServiceRequestDTO;
@@ -43,8 +51,10 @@ import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
 import org.springframework.test.context.TestPropertySource;
+import org.springframework.validation.beanvalidation.CustomValidatorBean;
 
 import java.io.ByteArrayInputStream;
 import java.io.InputStream;
@@ -56,8 +66,7 @@ import java.util.*;
 
 import static it.gov.pagopa.initiative.constants.InitiativeConstants.Role.ADMIN;
 import static it.gov.pagopa.initiative.constants.InitiativeConstants.Role.OPE_BASE;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
@@ -139,6 +148,9 @@ class InitiativeServiceTest {
     DecryptRestConnector decryptRestConnector;
 
     @MockBean
+    RankingRestConnector rankingRestConnector;
+
+    @MockBean
     EmailNotificationService emailNotificationService;
 
     @MockBean
@@ -151,7 +163,7 @@ class InitiativeServiceTest {
     InitiativeUtils initiativeUtils;
 
     @Test
-    void givenRoleAdmin_retrieveInitiativeSummary_ok() throws Exception {
+    void givenRoleAdmin_retrieveInitiativeSummary_ok() {
         Initiative step2Initiative1 = createStep2Initiative();
         Initiative step2Initiative2 = createStep2Initiative();
         List<Initiative> initiativeList = Arrays.asList(step2Initiative1, step2Initiative2);
@@ -170,11 +182,10 @@ class InitiativeServiceTest {
     }
 
     @Test
-    void givenRoleOpeBase_statusInRevision_retrieveInitiativeSummary_ok() throws Exception {
+    void givenRoleOpeBase_statusInRevision_retrieveInitiativeSummary_ok() {
         Initiative step2Initiative1 = createStep2Initiative();
         step2Initiative1.setStatus(InitiativeConstants.Status.IN_REVISION);
-        Initiative step2Initiative2 = createStep2Initiative();
-        List<Initiative> initiativeList = Arrays.asList(step2Initiative1);
+        List<Initiative> initiativeList = List.of(step2Initiative1);
 
         //Instruct the Repo Mock to return Dummy Initiatives
         when(initiativeRepository.retrieveInitiativeSummary(ORGANIZATION_ID, true)).thenReturn(initiativeList);
@@ -190,11 +201,10 @@ class InitiativeServiceTest {
     }
 
     @Test
-    void givenRoleOpeBase_statusApproved_retrieveInitiativeSummary_ok() throws Exception {
+    void givenRoleOpeBase_statusApproved_retrieveInitiativeSummary_ok() {
         Initiative step2Initiative1 = createStep2Initiative();
         step2Initiative1.setStatus(InitiativeConstants.Status.APPROVED);
-        Initiative step2Initiative2 = createStep2Initiative();
-        List<Initiative> initiativeList = Arrays.asList(step2Initiative1);
+        List<Initiative> initiativeList = List.of(step2Initiative1);
 
         //Instruct the Repo Mock to return Dummy Initiatives
         when(initiativeRepository.retrieveInitiativeSummary(ORGANIZATION_ID, true)).thenReturn(initiativeList);
@@ -210,11 +220,10 @@ class InitiativeServiceTest {
     }
 
     @Test
-    void givenRoleOpeBase_statusToCheck_retrieveInitiativeSummary_ok() throws Exception {
+    void givenRoleOpeBase_statusToCheck_retrieveInitiativeSummary_ok() {
         Initiative step2Initiative1 = createStep2Initiative();
         step2Initiative1.setStatus(InitiativeConstants.Status.TO_CHECK);
-        Initiative step2Initiative2 = createStep2Initiative();
-        List<Initiative> initiativeList = Arrays.asList(step2Initiative1);
+        List<Initiative> initiativeList = List.of(step2Initiative1);
 
         //Instruct the Repo Mock to return Dummy Initiatives
         when(initiativeRepository.retrieveInitiativeSummary(ORGANIZATION_ID, true)).thenReturn(initiativeList);
@@ -243,7 +252,24 @@ class InitiativeServiceTest {
     }
 
     @Test
-    void insertInitiative_ok() throws Exception {
+    void testGetInitiativesIssuerList() {
+        Initiative step2Initiative1 = createStep2Initiative();
+        step2Initiative1.setStatus(Status.PUBLISHED);
+        List<Initiative> initiativeList = List.of(step2Initiative1);
+
+        //Instruct the Repo Mock to return Dummy Initiatives
+        when(initiativeRepository.findByEnabledAndStatus(true, "PUBLISHED")).thenReturn(initiativeList);
+
+        //Try to call the Real Service (which is using the instructed Repo)
+        List<Initiative> initiatives = initiativeService.getInitiativesIssuerList();
+
+        //Check the equality of the results
+        assertEquals(initiativeList, initiatives);
+        verify(initiativeRepository).findByEnabledAndStatus(any(), any());
+    }
+
+    @Test
+    void insertInitiative_ok() {
         Initiative step2Initiative = createStep2Initiative();
 
         //Instruct the Repo Mock to return Dummy Initiatives
@@ -260,20 +286,30 @@ class InitiativeServiceTest {
     }
 
     @Test
+    void insertInitiative_setStatus() {
+        Initiative step2Initiative = createStep2Initiative();
+        step2Initiative.setStatus(null);
+
+        initiativeService.insertInitiative(step2Initiative, ORGANIZATION_ID, ORGANIZATION_NAME, ROLE);
+        assertEquals(InitiativeConstants.Status.DRAFT, step2Initiative.getStatus());
+    }
+
+    @Test
     void getInitiativeIdFromServiceId_thenValidationIsPassed() {
         Initiative step1Initiative = createStep1Initiative();
         when(initiativeRepository.retrieveServiceId(SERVICE_ID)).thenReturn(Optional.ofNullable(step1Initiative));
         Initiative initiative = initiativeService.getInitiativeIdFromServiceId(SERVICE_ID);
-        assertEquals(Optional.ofNullable(step1Initiative).get(), initiative);
+        assertEquals(step1Initiative, initiative);
         verify(initiativeRepository, times(1)).retrieveServiceId(SERVICE_ID);
     }
 
     @Test
-    void getInitiativeIdFromServiceId_throwInitiativeException_thenValidationFailed() throws Exception {
-        Initiative step1Initiative = new Initiative();
+    void getInitiativeIdFromServiceId_throwInitiativeException_thenValidationFailed() {
         when(initiativeRepository.retrieveServiceId(SERVICE_ID)).thenReturn(Optional.empty());
+        Mockito.doThrow(new InitiativeException(NotFound.CODE,
+                String.format(NotFound.INITIATIVE_ID_BY_SERVICE_ID_MESSAGE, SERVICE_ID),HttpStatus.NOT_FOUND)).when(initiativeRepository).retrieveServiceId("");
         try {
-            Initiative initiative = initiativeService.getInitiativeIdFromServiceId(SERVICE_ID);
+            initiativeService.getInitiativeIdFromServiceId(SERVICE_ID);
         } catch (InitiativeException e) {
             log.info("InitiativeException: " + e.getCode());
             assertEquals(HttpStatus.NOT_FOUND, e.getHttpStatus());
@@ -287,15 +323,19 @@ class InitiativeServiceTest {
         Initiative step1Initiative = createStep1Initiative();
         when(initiativeRepository.findByInitiativeIdAndEnabled(INITIATIVE_ID, true)).thenReturn(Optional.ofNullable(step1Initiative));
         InitiativeAdditional additional = initiativeService.getPrimaryAndSecondaryTokenIO(INITIATIVE_ID);
-        assertEquals(Optional.ofNullable(step1Initiative.getAdditionalInfo()).get(), additional);
+        assert step1Initiative != null;
+        assertEquals(step1Initiative.getAdditionalInfo(), additional);
         verify(initiativeRepository, times(1)).findByInitiativeIdAndEnabled(INITIATIVE_ID, true);
     }
 
     @Test
-    void getPrimaryAndSecondaryToken_throwInitiativeException_thenValidationFailed() throws Exception {
+    void getPrimaryAndSecondaryToken_throwInitiativeException_thenValidationFailed() {
         when(initiativeRepository.findByInitiativeIdAndEnabled(INITIATIVE_ID, true)).thenReturn(Optional.empty());
+        Mockito.doThrow(new InitiativeException(NotFound.CODE,
+                String.format(NotFound.INITIATIVE_ID_BY_SERVICE_ID_MESSAGE, SERVICE_ID),HttpStatus.NOT_FOUND))
+                .when(initiativeRepository).findByInitiativeIdAndEnabled("", true);
         try {
-            InitiativeAdditional additional = initiativeService.getPrimaryAndSecondaryTokenIO(INITIATIVE_ID);
+            initiativeService.getPrimaryAndSecondaryTokenIO(INITIATIVE_ID);
         } catch (InitiativeException e) {
             log.info("InitiativeException: " + e.getCode());
             assertEquals(HttpStatus.NOT_FOUND, e.getHttpStatus());
@@ -305,7 +345,7 @@ class InitiativeServiceTest {
     }
 
     @Test
-    void getInitiative_ok() throws Exception {
+    void getInitiative_ok() {
         Initiative step2Initiative = createStep2Initiative();
 
         //Instruct the initiativeValidationService Mock to return Dummy Initiatives
@@ -322,7 +362,7 @@ class InitiativeServiceTest {
     }
 
     @Test
-    void getInitiative_ko() throws Exception {
+    void getInitiative_ko() {
         //doThrow InitiativeException for getInitiative method
         doThrow(new InitiativeException(
                 InitiativeConstants.Exception.NotFound.CODE,
@@ -338,7 +378,7 @@ class InitiativeServiceTest {
     }
 
     @Test
-    void getInitiative_roleBase_statusInRevision_ok() throws Exception {
+    void getInitiative_roleBase_statusInRevision_ok() {
         Initiative step2Initiative = createStep2Initiative();
         step2Initiative.setStatus(InitiativeConstants.Status.IN_REVISION);
 
@@ -356,7 +396,7 @@ class InitiativeServiceTest {
     }
 
     @Test
-    void getInitiative_roleBase_statusApproved_ok() throws Exception {
+    void getInitiative_roleBase_statusApproved_ok() {
         Initiative step2Initiative = createStep2Initiative();
         step2Initiative.setStatus(InitiativeConstants.Status.APPROVED);
 
@@ -374,7 +414,7 @@ class InitiativeServiceTest {
     }
 
     @Test
-    void getInitiative_roleBase_statusToCheck_ok() throws Exception {
+    void getInitiative_roleBase_statusToCheck_ok() {
         Initiative step2Initiative = createStep2Initiative();
         step2Initiative.setStatus(InitiativeConstants.Status.TO_CHECK);
 
@@ -392,7 +432,7 @@ class InitiativeServiceTest {
     }
 
     @Test
-    void getInitiative_roleBase_statusNotValid_thenThrowException_ok() throws Exception {
+    void getInitiative_roleBase_statusNotValid_thenThrowException_ok() {
         Initiative step2Initiative = createStep2Initiative();
         step2Initiative.setStatus(InitiativeConstants.Status.PUBLISHED);
 
@@ -410,7 +450,7 @@ class InitiativeServiceTest {
     }
 
     @Test
-    void getInitiativeBeneficiaryView_ok() throws Exception {
+    void getInitiativeBeneficiaryView_ok() {
         Initiative step2Initiative = createStep2Initiative();
 
         //Instruct the Repo Mock to return Dummy Initiatives
@@ -420,17 +460,17 @@ class InitiativeServiceTest {
         Initiative initiative = initiativeService.getInitiativeBeneficiaryView(INITIATIVE_ID);
 
         //Check the equality of the results
-        assertEquals(Optional.ofNullable(step2Initiative).get(), initiative);
+        assertEquals(step2Initiative, initiative);
 
         // you are expecting repo to be called once with correct param
         verify(initiativeRepository).retrieveInitiativeBeneficiaryView(INITIATIVE_ID, true); // same as: verify(initiativeRepository, times(1)).retrieveInitiativeSummary(anyString());
     }
 
     @Test
-    void getInitiativeBeneficiaryView_ko() throws Exception {
+    void getInitiativeBeneficiaryView_ko() {
         when(initiativeRepository.retrieveInitiativeBeneficiaryView(INITIATIVE_ID, true)).thenReturn(Optional.empty());
         try {
-            Initiative initiative = initiativeService.getInitiativeBeneficiaryView(INITIATIVE_ID);
+            initiativeService.getInitiativeBeneficiaryView(INITIATIVE_ID);
         } catch (InitiativeException e) {
             System.out.println("InitiativeException: " + e.getCode());
             assertEquals(HttpStatus.NOT_FOUND, e.getHttpStatus());
@@ -439,7 +479,7 @@ class InitiativeServiceTest {
     }
 
     @Test
-    void updateInitiativeGeneralInfo_ok() throws Exception {
+    void updateInitiativeGeneralInfo_ok() {
         Initiative step2Initiative = createStep2Initiative();
         InitiativeGeneral initiativeGeneral = createInitiativeGeneral(true);
         step2Initiative.setGeneral(initiativeGeneral);
@@ -452,7 +492,7 @@ class InitiativeServiceTest {
     }
 
     @Test
-    void updateInitiativeGeneralInfo_FakeInPUBLISHED_thenUnprocessableState() throws Exception {
+    void updateInitiativeGeneralInfo_FakeInPUBLISHED_thenUnprocessableState() {
         Initiative step2Initiative = createStep2Initiative();
         InitiativeGeneral initiativeGeneral = createInitiativeGeneral(true);
         step2Initiative.setGeneral(initiativeGeneral);
@@ -469,7 +509,7 @@ class InitiativeServiceTest {
     }
 
     @Test
-    void updateInitiativeGeneralInfo_thenThrowInitiativeException() throws Exception {
+    void updateInitiativeGeneralInfo_thenThrowInitiativeException() {
         Initiative fullInitiative = createStep2Initiative();
 
         //doThrow InitiativeException for getInitiative method
@@ -484,6 +524,25 @@ class InitiativeServiceTest {
         InitiativeException exception = Assertions.assertThrows(InitiativeException.class, executable);
         assertEquals(InitiativeConstants.Exception.NotFound.CODE, exception.getCode());
         assertEquals(InitiativeConstants.Exception.NotFound.INITIATIVE_BY_INITIATIVE_ID_MESSAGE.formatted(INITIATIVE_ID), exception.getMessage());
+    }
+
+    @Test
+    void updateInitiativeGeneralInfo_languageException() {
+        Initiative step2Initiative = createStep2Initiative();
+        Map<String, String> language = new HashMap<>();
+        language.put(Locale.ENGLISH.getLanguage(), "en");
+
+        InitiativeGeneral initiativeGeneral = createInitiativeGeneral(true);
+        initiativeGeneral.setDescriptionMap(language);
+        step2Initiative.setGeneral(initiativeGeneral);
+
+        when(initiativeValidationService.getInitiative(ORGANIZATION_ID, INITIATIVE_ID, ROLE)).thenReturn(step2Initiative);
+
+        try {
+            initiativeService.updateInitiativeGeneralInfo(ORGANIZATION_ID, INITIATIVE_ID, step2Initiative, ROLE);
+        } catch (InitiativeException e) {
+            assertEquals(InitiativeConstants.Exception.BadRequest.CODE, e.getCode());
+        }
     }
 
     @Test
@@ -504,11 +563,57 @@ class InitiativeServiceTest {
         LogoDTO logoDTO = initiativeService.storeInitiativeLogo(ORGANIZATION_ID, INITIATIVE_ID, logo, LOGO_MIME_TYPE,
                 FILE_NAME);
 
-        assertEquals(logoDTO.getLogoFileName(), FILE_NAME);
+        assertEquals(FILE_NAME,logoDTO.getLogoFileName());
     }
 
     @Test
-    void updateInitiativeAdditionalInfo_ok() throws Exception {
+    void storeInitiativeLogo_koExtension() throws Exception {
+        InputStream logo = new ByteArrayInputStream("logo.png".getBytes());
+        Initiative initiative = this.createFullInitiative();
+        Set <String> logoExtension = new HashSet<>();
+        Set <String> logoMimeTypes = new HashSet<>();
+        logoExtension.add(LOGO_EXTENSION);
+        logoMimeTypes.add(LOGO_MIME_TYPE);
+        InitiativeGeneral general = createInitiativeGeneral(true);
+        initiative.setGeneral(general);
+        Mockito.when(initiativeRepository.findByOrganizationIdAndInitiativeIdAndEnabled(ORGANIZATION_ID, INITIATIVE_ID, true)).thenReturn(Optional.of(initiative));
+        Mockito.doNothing().when(fileStorageConnector).uploadInitiativeLogo(Mockito.any(), Mockito.anyString(),
+                Mockito.anyString());
+        Mockito.when(initiativeUtils.getAllowedInitiativeLogoExtensions()).thenReturn(logoExtension);
+        Mockito.when(initiativeUtils.getAllowedInitiativeLogoMimeTypes()).thenReturn(logoMimeTypes);
+        try {
+            LogoDTO logoDTO = initiativeService.storeInitiativeLogo(ORGANIZATION_ID, INITIATIVE_ID, logo, LOGO_MIME_TYPE,
+                    "logo.jpg");
+        } catch(Exception e) {
+            assertTrue(e.getMessage().contains("Invalid file extension"));
+        }
+    }
+
+    @Test
+    void storeInitiativeLogo_koMimeType() throws Exception {
+        InputStream logo = new ByteArrayInputStream("logo.png".getBytes());
+        Initiative initiative = this.createFullInitiative();
+        Set <String> logoExtension = new HashSet<>();
+        Set <String> logoMimeTypes = new HashSet<>();
+        logoExtension.add(LOGO_EXTENSION);
+        logoMimeTypes.add(LOGO_MIME_TYPE);
+        InitiativeGeneral general = createInitiativeGeneral(true);
+        initiative.setGeneral(general);
+        Mockito.when(initiativeRepository.findByOrganizationIdAndInitiativeIdAndEnabled(ORGANIZATION_ID, INITIATIVE_ID, true)).thenReturn(Optional.of(initiative));
+        Mockito.doNothing().when(fileStorageConnector).uploadInitiativeLogo(Mockito.any(), Mockito.anyString(),
+                Mockito.anyString());
+        Mockito.when(initiativeUtils.getAllowedInitiativeLogoExtensions()).thenReturn(logoExtension);
+        Mockito.when(initiativeUtils.getAllowedInitiativeLogoMimeTypes()).thenReturn(logoMimeTypes);
+        try {
+            LogoDTO logoDTO = initiativeService.storeInitiativeLogo(ORGANIZATION_ID, INITIATIVE_ID, logo, "image/jpg",
+                    FILE_NAME);
+        } catch(Exception e) {
+            assertTrue(e.getMessage().contains("allowed only"));
+        }
+    }
+
+    @Test
+    void updateInitiativeAdditionalInfo_ok() {
         Initiative step2Initiative = createStep1Initiative();
         Initiative initiativeSavedExpected = createStep1Initiative();
 
@@ -527,7 +632,7 @@ class InitiativeServiceTest {
     }
 
     @Test
-    void updateInitiativeAdditionalInfo_thenThrowInitiativeException() throws Exception {
+    void updateInitiativeAdditionalInfo_thenThrowInitiativeException() {
         Initiative fullInitiative = createStep1Initiative();
 
         //doThrow InitiativeException for getInitiative method
@@ -545,7 +650,7 @@ class InitiativeServiceTest {
     }
 
     @Test
-    void updateInitiativeBeneficiary_ok() throws Exception {
+    void updateInitiativeBeneficiary_ok() {
         Initiative step2Initiative = createStep2Initiative();
         InitiativeBeneficiaryRule initiativeBeneficiaryRule = createInitiativeBeneficiaryRule();
 
@@ -564,7 +669,7 @@ class InitiativeServiceTest {
     }
 
     @Test
-    void updateInitiativeBeneficiary_thenThrowInitiativeException() throws Exception {
+    void updateInitiativeBeneficiary_thenThrowInitiativeException() {
         InitiativeBeneficiaryRule initiativeBeneficiaryRule = createInitiativeBeneficiaryRule();
 
         //doThrow InitiativeException for getInitiative method
@@ -582,7 +687,7 @@ class InitiativeServiceTest {
     }
 
     @Test
-    void updateInitiativeRewardAndTrxRules_ok() throws Exception {
+    void updateInitiativeRewardAndTrxRules_ok() {
         Initiative step3Initiative = createStep3Initiative();
 
         InitiativeRewardRule rewardRule = createRewardRule(false);
@@ -599,7 +704,7 @@ class InitiativeServiceTest {
     }
 
     @Test
-    void updateInitiativeRewardAndTrxRules_thenThrowInitiativeException() throws Exception {
+    void updateInitiativeRewardAndTrxRules_thenThrowInitiativeException() {
         InitiativeRewardRule rewardRule = createRewardRule(false);
         InitiativeTrxConditions trxRuleCondition = createTrxRuleCondition();
         Initiative initiative = Initiative.builder().rewardRule(rewardRule).trxRule(trxRuleCondition).build();
@@ -642,6 +747,21 @@ class InitiativeServiceTest {
         InitiativeException exception = Assertions.assertThrows(InitiativeException.class, executable);
         assertEquals(InitiativeConstants.Exception.NotFound.CODE, exception.getCode());
         assertEquals(InitiativeConstants.Exception.NotFound.INITIATIVE_BY_INITIATIVE_ID_MESSAGE.formatted(INITIATIVE_ID), exception.getMessage());
+    }
+
+    @Test
+    void updateInitiativeRefundRules_emailException() {
+        Initiative initiative = createInitiativeOnlyRefundRule();
+
+        when(initiativeValidationService.getInitiative(ORGANIZATION_ID, INITIATIVE_ID, ROLE)).thenReturn(initiative);
+
+        Mockito.doNothing().when(emailNotificationService).sendInitiativeToCurrentOrganization(Mockito.any(), Mockito.anyString(),
+                Mockito.anyString());
+        try {
+            initiativeService.updateInitiativeRefundRules(ORGANIZATION_ID, INITIATIVE_ID, ROLE, initiative, true);
+        } catch (FeignException e) {
+            Assertions.fail();
+        }
     }
 
     @Test
@@ -710,6 +830,24 @@ class InitiativeServiceTest {
     }
 
     @Test
+    void updateInitiativeApprovedStatus_emailException() {
+        Initiative step4Initiative = createStep4Initiative();
+        step4Initiative.setStatus(InitiativeConstants.Status.IN_REVISION);
+
+        when(initiativeValidationService.getInitiative(ORGANIZATION_ID, INITIATIVE_ID, ROLE)).thenReturn(step4Initiative);
+
+        Request request =
+                Request.create(Request.HttpMethod.PUT, "url", new HashMap<>(), null, new RequestTemplate());
+        Mockito.doThrow(new FeignException.BadRequest("", request, new byte[0], null))
+                .when(emailNotificationService).sendInitiativeToCurrentOrganization(Mockito.any(), Mockito.anyString(),
+                        Mockito.anyString());
+        try {
+            initiativeService.updateInitiativeApprovedStatus(ORGANIZATION_ID, INITIATIVE_ID, ROLE);
+        } catch (FeignException e) {
+            Assertions.fail();}
+    }
+
+    @Test
     void logicallyDeleteInitiative_thenDeletedIsSettedToTrueWithSuccess() {
         Initiative initiative = createStep5Initiative();
         initiative.setEnabled(true);
@@ -742,6 +880,49 @@ class InitiativeServiceTest {
     }
 
     @Test
+    void logicallyDeleteInitiative_thenThrowNewInitiativeException2() {
+        Initiative initiative = createStep4Initiative();
+        initiative.setStatus(InitiativeConstants.Status.PUBLISHED);
+
+        when(initiativeValidationService.getInitiative(ORGANIZATION_ID, INITIATIVE_ID, ROLE)).thenReturn(initiative);
+
+        try {
+            initiativeService.logicallyDeleteInitiative(ORGANIZATION_ID, INITIATIVE_ID, ROLE);
+        }
+        catch (InitiativeException e){
+            assertEquals(InitiativeConstants.Exception.BadRequest.CODE, e.getCode());
+        }
+    }
+
+    @Test
+    void logicallyDeleteInitiative_emailException() {
+        Initiative initiative = createStep5Initiative();
+        initiative.setEnabled(true);
+
+        //Instruct the initiativeValidationService Mock to return Dummy Initiatives
+        when(initiativeValidationService.getInitiative(ORGANIZATION_ID, INITIATIVE_ID, ROLE)).thenReturn(initiative);
+        //Try to call the Real Service (which is using the instructed Repo)
+        initiativeService.logicallyDeleteInitiative(ORGANIZATION_ID, INITIATIVE_ID, ROLE);
+
+        Request request =
+                Request.create(Request.HttpMethod.DELETE, "url", new HashMap<>(), null, new RequestTemplate());
+        Mockito.doThrow(new FeignException.BadRequest("", request, new byte[0], null))
+                .when(emailNotificationService).sendInitiativeToPagoPA(Mockito.any(), Mockito.anyString(),
+                        Mockito.anyString());
+        try {
+            initiativeService.logicallyDeleteInitiative(ORGANIZATION_ID, INITIATIVE_ID, ROLE);
+        } catch (FeignException e) {
+            Assertions.fail();}
+    }
+
+    @Test
+    void sendInitiativeInfoToNotificationManager() {
+        Initiative initiative = createStep5Initiative();
+        initiativeService.sendInitiativeInfoToNotificationManager(initiative);
+        verify(groupRestConnector).notifyInitiativeToGroup(initiative);
+    }
+
+    @Test
     void updateInitiativeStatusToCheck_thenStatusIsUpdatedWithSuccess() {
         Initiative step4Initiative = createStep4Initiative();
         step4Initiative.setStatus(InitiativeConstants.Status.IN_REVISION);
@@ -771,6 +952,24 @@ class InitiativeServiceTest {
         InitiativeException exception = Assertions.assertThrows(InitiativeException.class, executable);
         assertEquals(InitiativeConstants.Exception.NotFound.CODE, exception.getCode());
         assertEquals(InitiativeConstants.Exception.NotFound.INITIATIVE_BY_INITIATIVE_ID_MESSAGE.formatted(INITIATIVE_ID), exception.getMessage());
+    }
+
+    @Test
+    void updateInitiativeStatusToCheck_emailException() {
+        Initiative step4Initiative = createStep4Initiative();
+        step4Initiative.setStatus(InitiativeConstants.Status.IN_REVISION);
+
+        when(initiativeValidationService.getInitiative(ORGANIZATION_ID, INITIATIVE_ID, ROLE)).thenReturn(step4Initiative);
+
+        Request request =
+                Request.create(Request.HttpMethod.PUT, "url", new HashMap<>(), null, new RequestTemplate());
+        Mockito.doThrow(new FeignException.BadRequest("", request, new byte[0], null))
+                .when(emailNotificationService).sendInitiativeToCurrentOrganization(Mockito.any(), Mockito.anyString(),
+                        Mockito.anyString());
+        try {
+            initiativeService.updateInitiativeToCheckStatus(ORGANIZATION_ID, INITIATIVE_ID, ROLE);
+        } catch (FeignException e) {
+            Assertions.fail();}
     }
 
     @Test
@@ -833,6 +1032,18 @@ class InitiativeServiceTest {
     }
 
     @Test
+    void givenInitiativeAPPROVEDandNextStatusPUBLISHED_throwsException() {
+        Initiative initiative = createStep5Initiative();
+
+        try {
+            initiativeService.isInitiativeAllowedToBeNextStatusThenThrows(initiative, STATUS,
+                    InitiativeConstants.Role.OPE_BASE);
+        } catch (InitiativeException e) {
+            assertEquals(InitiativeConstants.Exception.BadRequest.CODE, e.getCode());
+        }
+    }
+
+    @Test
     void givenInitiativeDTO_whenRuleEngineProduceIsValid_thenOk() {
         //Instruct Initiative
         Initiative initiative = createStep5Initiative();
@@ -857,12 +1068,12 @@ class InitiativeServiceTest {
         //Prepare Executable with invocation of the method on your system under test
         Executable executable = () -> initiativeService.sendInitiativeInfoToRuleEngine(initiative);
 
-        IllegalStateException exception = Assertions.assertThrows(IllegalStateException.class, executable);
+        Assertions.assertThrows(IllegalStateException.class, executable);
     }
 
     @Test
         //Mancano i test con Exception
-    void givenDTOsInitiativeAndInitiativeOrganizationInfo_whenIntegrationWithIOBackEndIsOK_thenReturnInitiativeUpdated() throws Exception {
+    void givenDTOsInitiativeAndInitiativeOrganizationInfo_whenIntegrationWithIOBackEndIsOK_thenReturnInitiativeUpdated() {
         //Instruct Initiative
         Initiative initiative = createStep5Initiative();
 
@@ -890,6 +1101,128 @@ class InitiativeServiceTest {
     }
 
     @Test
+    void sendInitiativeInfoToIOBackEndServiceAndUpdateInitiative_feignException() {
+        Initiative initiative = createStep5Initiative();
+        InitiativeAdditional initiativeAdditional = createInitiativeAdditional();
+        InitiativeOrganizationInfoDTO initiativeOrganizationInfoDTO = InitiativeOrganizationInfoDTO.builder()
+                .organizationName(ORGANIZATION_NAME)
+                .organizationVat(ORGANIZATION_VAT)
+                .organizationUserRole(ORGANIZATION_USER_ROLE)
+                .build();
+        ServiceRequestDTO serviceRequestDTOexpected = createServiceRequestDTO();
+        ServiceResponseDTO serviceResponseDTOexpected = createServiceResponseDTO();
+        Request request =
+                Request.create(Request.HttpMethod.PUT, "url", new HashMap<>(), null, new RequestTemplate());
+        when(initiativeAdditionalDTOsToIOServiceRequestDTOMapper.toServiceRequestDTO(initiativeAdditional, initiativeOrganizationInfoDTO)).thenReturn(serviceRequestDTOexpected);
+        when(ioBackEndRestConnector.createService(serviceRequestDTOexpected)).thenReturn(serviceResponseDTOexpected);
+        when(ioTokenService.encrypt(anyString())).thenReturn(ANY_KEY_TOKEN_IO);
+        Mockito.doThrow(new FeignException.BadRequest("", request, new byte[0], null))
+                .when(emailNotificationService).sendInitiativeToCurrentOrganization(Mockito.any(), Mockito.anyString(),
+                        Mockito.anyString());
+        Mockito.doThrow(new FeignException.BadRequest("", request, new byte[0], null))
+                .when(emailNotificationService).sendInitiativeToPagoPA(Mockito.any(), Mockito.anyString(),
+                        Mockito.anyString());
+        try {
+            initiativeService.sendInitiativeInfoToIOBackEndServiceAndUpdateInitiative(initiative, initiativeOrganizationInfoDTO);
+        } catch (FeignException e) {
+            Assertions.fail();}
+    }
+
+    @Test
+    void getRankingList_ok() {
+        Initiative initiative = this.createFullInitiative();
+        RankingRequestDTO rankingRequestDTO = new RankingRequestDTO(USER_ID,INITIATIVE_ID,ORGANIZATION_ID,LocalDateTime.now(),LocalDateTime.now(),1,1,"test");
+        RankingPageDTO rankingPageDTO =new RankingPageDTO();
+        rankingPageDTO.setContent(List.of(rankingRequestDTO));
+        DecryptCfDTO decryptCfDTO = new DecryptCfDTO(CF);
+        EncryptedCfDTO encryptedCfDTO = new EncryptedCfDTO(USER_ID);
+        Mockito.when(rankingRestConnector.getRankingList(Mockito.anyString(),Mockito.anyString(),Mockito.any(),Mockito.anyString(),Mockito.anyString())).thenReturn(rankingPageDTO);
+        Mockito.when(encryptRestConnector.upsertToken(Mockito.any())).thenReturn(encryptedCfDTO);
+        Mockito.when(initiativeRepository.findByOrganizationIdAndInitiativeIdAndEnabled(ORGANIZATION_ID, INITIATIVE_ID, true)).thenReturn(Optional.of(initiative));
+        Mockito.when(decryptRestConnector.getPiiByToken(USER_ID)).thenReturn(decryptCfDTO);
+        BeneficiaryRankingPageDTO beneficiaryRankingDTO = initiativeService.getRankingList(ORGANIZATION_ID,INITIATIVE_ID,null, encryptedCfDTO.getToken(),
+                Status.PUBLISHED);
+        assertEquals(CF,beneficiaryRankingDTO.getContent().get(0).getBeneficiary());
+
+    }
+    @Test
+    void getRankingList_initiative_not_found() {
+        try {
+            BeneficiaryRankingPageDTO beneficiaryRankingDTO = initiativeService.getRankingList(ORGANIZATION_ID,INITIATIVE_ID,null, "",
+                    Status.PUBLISHED);
+            Assertions.fail();
+        } catch (InitiativeException e) {
+            assertEquals(NotFound.CODE,e.getCode());
+        }
+    }
+    @Test
+    void getRankingList_ko_encrypt() {
+        Initiative initiative = this.createFullInitiative();
+        OnboardingStatusCitizenDTO onboardingStatusCitizenDTO = new OnboardingStatusCitizenDTO(USER_ID, STATUS, LocalDateTime.now().toString());
+        EncryptedCfDTO encryptedCfDTO = new EncryptedCfDTO(USER_ID);
+        Mockito.when(initiativeRepository.findByOrganizationIdAndInitiativeIdAndEnabled(ORGANIZATION_ID, INITIATIVE_ID, true)).thenReturn(Optional.of(initiative));
+        Mockito.doThrow(new InitiativeException(InternalServerError.CODE, "", HttpStatus.INTERNAL_SERVER_ERROR)).when(encryptRestConnector).upsertToken(Mockito.any());
+        try {
+            BeneficiaryRankingPageDTO beneficiaryRankingDTO = initiativeService.getRankingList(ORGANIZATION_ID,INITIATIVE_ID,null, "",
+                    Status.PUBLISHED);
+            Assertions.fail();
+        } catch (InitiativeException e) {
+            assertEquals(InternalServerError.CODE,e.getCode());
+        }
+    }
+
+    @Test
+    void getRankingList_ko_decrypt() {
+        Initiative initiative = this.createFullInitiative();
+        RankingRequestDTO rankingRequestDTO = new RankingRequestDTO(USER_ID,INITIATIVE_ID,ORGANIZATION_ID,LocalDateTime.now(),LocalDateTime.now(),1,1,"test");
+        RankingPageDTO rankingPageDTO =new RankingPageDTO();
+        rankingPageDTO.setContent(List.of(rankingRequestDTO));
+        EncryptedCfDTO encryptedCfDTO = new EncryptedCfDTO(USER_ID);
+        Mockito.when(rankingRestConnector.getRankingList(Mockito.anyString(),Mockito.anyString(),Mockito.any(),Mockito.anyString(),Mockito.anyString())).thenReturn(rankingPageDTO);
+        Mockito.when(encryptRestConnector.upsertToken(Mockito.any())).thenReturn(encryptedCfDTO);
+        Mockito.when(initiativeRepository.findByOrganizationIdAndInitiativeIdAndEnabled(ORGANIZATION_ID, INITIATIVE_ID, true)).thenReturn(Optional.of(initiative));
+        Mockito.doThrow(new InitiativeException(InternalServerError.CODE, "", HttpStatus.INTERNAL_SERVER_ERROR)).when(decryptRestConnector).getPiiByToken(Mockito.anyString());
+        try {
+            BeneficiaryRankingPageDTO beneficiaryRankingDTO = initiativeService.getRankingList(ORGANIZATION_ID,INITIATIVE_ID,null, "",
+                    Status.PUBLISHED);
+            Assertions.fail();
+        } catch (InitiativeException e) {
+            assertEquals(InternalServerError.CODE,e.getCode());
+        }
+    }
+
+    @Test
+    void getRankingList_ko_ranking() {
+        Initiative initiative = this.createFullInitiative();
+        EncryptedCfDTO encryptedCfDTO = new EncryptedCfDTO(USER_ID);
+        Mockito.when(encryptRestConnector.upsertToken(Mockito.any())).thenReturn(encryptedCfDTO);
+        Mockito.when(initiativeRepository.findByOrganizationIdAndInitiativeIdAndEnabled(ORGANIZATION_ID, INITIATIVE_ID, true)).thenReturn(Optional.of(initiative));
+        Mockito.doThrow(new InitiativeException(InternalServerError.CODE, "", HttpStatus.INTERNAL_SERVER_ERROR)).when(rankingRestConnector).getRankingList(Mockito.anyString(),Mockito.anyString(),Mockito.any(),Mockito.anyString(),Mockito.anyString());
+        try {
+            BeneficiaryRankingPageDTO beneficiaryRankingDTO = initiativeService.getRankingList(ORGANIZATION_ID,INITIATIVE_ID,null, "",
+                    Status.PUBLISHED);
+            Assertions.fail();
+        } catch (InitiativeException e) {
+            assertEquals(InternalServerError.CODE,e.getCode());
+        }
+    }
+
+    @Test
+    void getRankingList_ko_ranking_disabled() {
+        Initiative initiative = this.createFullInitiative();
+        initiative.setGeneral(new InitiativeGeneral());
+        initiative.getGeneral().setRankingEnabled(false);
+        Mockito.when(initiativeRepository.findByOrganizationIdAndInitiativeIdAndEnabled(ORGANIZATION_ID, INITIATIVE_ID, true)).thenReturn(Optional.of(initiative));
+        try {
+            BeneficiaryRankingPageDTO beneficiaryRankingDTO = initiativeService.getRankingList(ORGANIZATION_ID,INITIATIVE_ID,null, "",
+                    Status.PUBLISHED);
+            Assertions.fail();
+        } catch (InitiativeException e) {
+            assertEquals(InternalServerError.CODE,e.getCode());
+        }
+    }
+
+    @Test
     void getOnboardingStatusList_ok() {
         Initiative initiative = this.createFullInitiative();
         OnboardingStatusCitizenDTO onboardingStatusCitizenDTO = new OnboardingStatusCitizenDTO(USER_ID, STATUS, LocalDateTime.now().toString());
@@ -903,23 +1236,21 @@ class InitiativeServiceTest {
         Mockito.when(onboardingRestConnector.getOnboarding(INITIATIVE_ID, null, USER_ID, STARTDATE, ENDDATE, STATUS)).thenReturn(onboardingDTO);
         Mockito.when(decryptRestConnector.getPiiByToken(USER_ID)).thenReturn(decryptCfDTO);
         OnboardingDTO onboardingDTO1 = initiativeService.getOnboardingStatusList(ORGANIZATION_ID, INITIATIVE_ID, CF, STARTDATE, ENDDATE, STATUS, null);
-        assertEquals(onboardingDTO1.getContent().get(0).getBeneficiary(), CF);
-        assertEquals(onboardingDTO1.getContent().get(0).getBeneficiaryState(), STATUS);
+        assertEquals(CF,onboardingDTO1.getContent().get(0).getBeneficiary());
+        assertEquals(STATUS,onboardingDTO1.getContent().get(0).getBeneficiaryState());
 
     }
 
     @Test
     void getOnboardingStatusList_ko_encrypt() {
         Initiative initiative = this.createFullInitiative();
-        OnboardingStatusCitizenDTO onboardingStatusCitizenDTO = new OnboardingStatusCitizenDTO(USER_ID, STATUS, LocalDateTime.now().toString());
-        EncryptedCfDTO encryptedCfDTO = new EncryptedCfDTO(USER_ID);
         Mockito.when(initiativeRepository.findByOrganizationIdAndInitiativeIdAndEnabled(ORGANIZATION_ID, INITIATIVE_ID, true)).thenReturn(Optional.of(initiative));
         Mockito.doThrow(new InitiativeException(InternalServerError.CODE, "", HttpStatus.INTERNAL_SERVER_ERROR)).when(encryptRestConnector).upsertToken(Mockito.any());
         try {
-            OnboardingDTO onboardingDTO1 = initiativeService.getOnboardingStatusList(ORGANIZATION_ID, INITIATIVE_ID, CF, STARTDATE, ENDDATE, STATUS, null);
-            Assertions.fail();
+            initiativeService.getOnboardingStatusList(ORGANIZATION_ID, INITIATIVE_ID, CF, STARTDATE, ENDDATE, STATUS,
+                    Pageable.ofSize(21));
         } catch (InitiativeException e) {
-            assertEquals(e.getCode(), InternalServerError.CODE);
+            assertEquals(InternalServerError.CODE,e.getCode());
         }
     }
 
@@ -933,13 +1264,13 @@ class InitiativeServiceTest {
         EncryptedCfDTO encryptedCfDTO = new EncryptedCfDTO(USER_ID);
         Mockito.when(encryptRestConnector.upsertToken(Mockito.any())).thenReturn(encryptedCfDTO);
         Mockito.when(initiativeRepository.findByOrganizationIdAndInitiativeIdAndEnabled(ORGANIZATION_ID, INITIATIVE_ID, true)).thenReturn(Optional.of(initiative));
-        Mockito.when(onboardingRestConnector.getOnboarding(INITIATIVE_ID, null, USER_ID, STARTDATE, ENDDATE, STATUS)).thenReturn(onboardingDTO);
+        Mockito.when(onboardingRestConnector.getOnboarding(INITIATIVE_ID, Pageable.ofSize(21), USER_ID, STARTDATE, ENDDATE, STATUS)).thenReturn(onboardingDTO);
         Mockito.doThrow(new InitiativeException(InternalServerError.CODE, "", HttpStatus.INTERNAL_SERVER_ERROR)).when(decryptRestConnector).getPiiByToken(Mockito.anyString());
         try {
-            OnboardingDTO onboardingDTO1 = initiativeService.getOnboardingStatusList(ORGANIZATION_ID, INITIATIVE_ID, CF, STARTDATE, ENDDATE, STATUS, null);
-            Assertions.fail();
+            initiativeService.getOnboardingStatusList(ORGANIZATION_ID, INITIATIVE_ID, CF, STARTDATE, ENDDATE, STATUS,
+                    Pageable.ofSize(21));
         } catch (InitiativeException e) {
-            assertEquals(e.getCode(), InternalServerError.CODE);
+            assertEquals(InternalServerError.CODE,e.getCode());
         }
     }
 
@@ -954,17 +1285,17 @@ class InitiativeServiceTest {
             OnboardingDTO onboardingDTO1 = initiativeService.getOnboardingStatusList(ORGANIZATION_ID, INITIATIVE_ID, CF, STARTDATE, ENDDATE, STATUS, null);
             Assertions.fail();
         } catch (InitiativeException e) {
-            assertEquals(e.getCode(), InternalServerError.CODE);
+            assertEquals(InternalServerError.CODE,e.getCode());
         }
     }
 
     @Test
-    void getOnboardingStatusList_initiative_not_found() {
+    void getOnboardingStatusList_initiative_internal_server_error() {
         try {
             OnboardingDTO onboardingDTO1 = initiativeService.getOnboardingStatusList(ORGANIZATION_ID, INITIATIVE_ID, CF, STARTDATE, ENDDATE, STATUS, null);
             Assertions.fail();
         } catch (InitiativeException e) {
-            assertEquals(e.getCode(), NotFound.CODE);
+            assertEquals(InternalServerError.CODE,e.getCode());
         }
     }
 
@@ -1022,13 +1353,11 @@ class InitiativeServiceTest {
     }
 
     Initiative createFullInitiative() {
-        Initiative initiative = createStep5Initiative();
-        return initiative;
+        return createStep5Initiative();
     }
 
     InitiativeDTO createFullInitiativeDTO() {
-        InitiativeDTO initiativeDTO = createStep5InitiativeDTO();
-        return initiativeDTO;
+        return createStep5InitiativeDTO();
     }
 
     /*
@@ -1043,8 +1372,6 @@ class InitiativeServiceTest {
         initiative.setStatus("DRAFT");
         initiative.setPdndToken("pdndToken1");
         initiative.setAdditionalInfo(createInitiativeAdditional());
-//        initiative.setBeneficiaryRule(createInitiativeBeneficiaryRule());
-//        initiative.setLegal(createInitiativeLegal());
         return initiative;
     }
 
@@ -1053,7 +1380,7 @@ class InitiativeServiceTest {
         language.put(Locale.ITALIAN.getLanguage(), "it");
         InitiativeGeneral initiativeGeneral = new InitiativeGeneral();
         initiativeGeneral.setBeneficiaryBudget(new BigDecimal(10));
-        initiativeGeneral.setBeneficiaryKnown(true);
+        initiativeGeneral.setBeneficiaryKnown(beneficiaryKnown);
         initiativeGeneral.setBeneficiaryType(InitiativeGeneral.BeneficiaryTypeEnum.PF);
         initiativeGeneral.setBudget(new BigDecimal(1000000000));
         initiativeGeneral.setEndDate(LocalDate.of(2022, 9, 8));
@@ -1082,8 +1409,7 @@ class InitiativeServiceTest {
     }
 
     InitiativeDTO createStep1InitiativeDTO() {
-        InitiativeDTO initiativeDTO = new InitiativeDTO();
-        initiativeDTO = initiativeDTO.builder()
+        InitiativeDTO initiativeDTO = InitiativeDTO.builder()
                 .initiativeId(INITIATIVE_ID)
                 .initiativeName(INITIATIVE_NAME)
                 .organizationId(ORGANIZATION_ID)
@@ -1124,7 +1450,6 @@ class InitiativeServiceTest {
         initiativeAdditionalDTO.setServiceScope(InitiativeAdditionalDTO.ServiceScope.LOCAL);
         initiativeAdditionalDTO.setDescription("description");
         initiativeAdditionalDTO.setPrivacyLink("privacy.url.it");
-        ;
         initiativeAdditionalDTO.setTcLink("tos.url.it");
         ChannelDTO channelDTO = new ChannelDTO();
         channelDTO.setType(ChannelDTO.TypeEnum.WEB);
@@ -1384,23 +1709,19 @@ class InitiativeServiceTest {
     }
 
     private Initiative createStep4Initiative() {
-        Initiative initiative = createStep3Initiative();
-        return initiative;
+        return createStep3Initiative();
     }
 
     private InitiativeDTO createStep4InitiativeDTO() {
-        InitiativeDTO initiativeDTO = createStep3InitiativeDTO();
-        return initiativeDTO;
+        return createStep3InitiativeDTO();
     }
 
     private Initiative createStep5Initiative() {
-        Initiative initiative = createStep4Initiative();
-        return initiative;
+        return createStep4Initiative();
     }
 
     private InitiativeDTO createStep5InitiativeDTO() {
-        InitiativeDTO initiativeDTO = createStep4InitiativeDTO();
-        return initiativeDTO;
+        return createStep4InitiativeDTO();
     }
 
     AccumulatedAmount createAccumulatedAmountValid() {
